several updates to the files, as well as some reorganizing. Most important, hollow_channel_m1.ipynb now should dump the drive bunch rho as a separate diagnostic.

--- a/rsfbpic/ipython_notebooks/hollow_channel/hollow_channel_m1.ipynb
+++ b/rsfbpic/ipython_notebooks/hollow_channel/hollow_channel_m1.ipynb
@@ -42,24 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/vagrant/.pyenv/versions/py2/lib/python2.7/site-packages/scipy/special/__init__.py:640: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._ufuncs import *\n",
-      "/home/vagrant/.pyenv/versions/py2/lib/python2.7/site-packages/scipy/linalg/basic.py:17: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._solve_toeplitz import levinson\n",
-      "/home/vagrant/.pyenv/versions/py2/lib/python2.7/site-packages/scipy/linalg/__init__.py:207: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._decomp_update import *\n",
-      "/home/vagrant/.pyenv/versions/py2/lib/python2.7/site-packages/scipy/special/_ellip_harm.py:7: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  from ._ellip_harm_2 import _ellipsoid, _ellipsoid_norm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Imports\n",
     "\n",
@@ -122,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,6 +265,10 @@
     "                                N=drive_N_macro, \n",
     "                                tf=0.0, \n",
     "                                zf=.75*domain_length, boost=None)\n",
+    "        \n",
+    "        if write_particles:\n",
+    "            sim.diags.append( ParticleChargeDensityDiagnostic( dump_period, sim, {'drive_bunch' : sim.ptcl[0]}) )\n",
+    "\n",
     "\n",
     "    sim.ptcl[-1].y[:] += bunch_offset\n",
     "\n",
@@ -9619,6 +9608,13 @@
     "\n",
     "> 5. C. A. Lindstrom _et al._ \"Measurement of Transverse Wakefields Induced by a Misaligned Positron Bunch in a Hollow Channel Plasma Accelerator\", _Phys. Rev. Lett._ __120__, 124802 (2018)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
